# march-madness-2026

./: .gitignore  README.md  generate_team_stats.py  pyproject.toml  start.sh
backend/: main.py
frontend/: package-lock.json  package.json
frontend/public/: bracket_data.json  index.html  team_stats.json
frontend/src/: App.js  index.css
frontend/src/components/: FinalFour.js  Matchup.js  RegionBracket.js  TeamCard.js  TeamSlot.js
frontend/src/hooks/: useBracket.js
notebooks/: combine_preds.py  eda.ipynb  womens.ipynb
