[project]
name = "march-madness-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbbpy>=2.1.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "mlflow>=3.10.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
