[project]
name = "march-madness-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbbpy>=2.1.2",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.10.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
